@@ -1,3 +1,7 @@
+2009-12-28  Xavier Perseguers  <typo3@perseguers.ch>
+
+	* Fixed bug #13104: SQL parser cannot parse escaped single quote in INSERT statement
+
 2009-12-27  Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Updated documentation: now using new documentation template
